# embedded-systems

./: .gitignore  CMakeLists.txt
hardware/: analog_to_digital_convertor.c  buzzer.c  external_interrupt.c  key_pad.c  pulse_width_modulation.c  seven_segment_display.c  stepper_motor.c
software/lab_1/: q1.s
software/lab_2/: q1.s  q2.s
software/lab_4/: q1.s
